package edu.hitsz.aircraft;

/**
 * Boss敌机
 */
public class boss_enemy extends AbstractEnemy {

    public boss_enemy(int locationX, int locationY, int speedX, int speedY, int hp) {
        super(locationX, locationY, speedX, speedY, hp);
    }

}