package edu.hitsz.aircraft;

/**
 * 强化精英敌机
 */
public class elitePlus_Enemy extends AbstractEnemy {

    public elitePlus_Enemy(int locationX, int locationY, int speedX, int speedY, int hp) {
        super(locationX, locationY, speedX, speedY, hp);
    }

}