package edu.hitsz.aircraft;

/**
 * 高级精英敌机
 */
public class elitePro_Enemy extends AbstractEnemy {

    public elitePro_Enemy(int locationX, int locationY, int speedX, int speedY, int hp) {
        super(locationX, locationY, speedX, speedY, hp);
    }

}