package edu.hitsz.bullet;

/**
 * 英雄机子弹
 * @Author hitsz qhy
 */
public class HeroBullet extends BaseBullet {

    public HeroBullet(int locationX, int locationY, int speedX, int speedY, int power) {
        super(locationX, locationY, speedX, speedY, power);
    }

}
