package edu.hitsz.prop;

/**
 * 加血道具
 */
public class BloodProp extends AbstractProp {

    public BloodProp(int locationX, int locationY,
                     int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }

}