package edu.hitsz.prop;

/**
 * 火力增强道具
 */
public class BulletProp extends AbstractProp {

    public BulletProp(int locationX, int locationY,
                      int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }

}