@startuml
title 飞机大战系统继承关系类图

abstract class AbstractFlyingObject
abstract class AbstractAircraft
class HeroAircraft
abstract class AbstractEnemy
class MobEnemy
class elite_Enemy
class elitePlus_Enemy
class elitePro_Enemy
class boss_enemy

abstract class BaseBullet
class HeroBullet
class EnemyBullet

abstract class AbstractProp
class BloodProp
class BombProp
class BulletProp
class BulletPlusProp
class FreezeProp

AbstractFlyingObject <|-- AbstractAircraft
AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- AbstractEnemy

AbstractEnemy <|-- MobEnemy
AbstractEnemy <|-- elite_Enemy
AbstractEnemy <|-- elitePlus_Enemy
AbstractEnemy <|-- elitePro_Enemy
AbstractEnemy <|-- boss_enemy

AbstractFlyingObject <|-- BaseBullet
BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractFlyingObject <|-- AbstractProp
AbstractProp <|-- BloodProp
AbstractProp <|-- BombProp
AbstractProp <|-- BulletProp
AbstractProp <|-- BulletPlusProp
AbstractProp <|-- FreezeProp

@enduml